--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
 @charset "UTF-8";
 
+.background-image {
+  width: 100%;
+  height: 1000px;
+  background-image: url('./image/background-image.jpg');
+  background-size: cover; /* 画像を要素全体にフィットさせる */
+  background-repeat: no-repeat; /* 画像の繰り返しを防ぐ */
+  background-position: center center; /* 画像を中央に配置する */
+}
+
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -31,8 +40,30 @@ nav ul li a {
 
 section {
   padding: 20px;
+  text-align: center;
 }
 
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 10px;
+  padding: 20px;
+}
+
+.grid-item {
+  background-color: #f4f4f4;
+  padding: 10px;
+  text-align: center;
+  border-radius: 5px;
+}
+
+.grid-item img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 5px;
+}
+
+/* モーダルウィンドウのスタイル */
 .modal {
   display: none;
   position: fixed;
@@ -42,8 +73,14 @@ section {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgba(0, 0, 0, 0.4);
+  opacity: 0;  /* 初期状態で透明にする */
+  transition: opacity 0.5s ease;  /* トランジションの設定 */
+}
+
+.modal.show {
+  display: block;
+  opacity: 1;  /* 表示時に不透明にする */
 }
 
 .modal-content {
