--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 
 .background-image {
-  width: 100%;
-  height: 1000px;
+  width: auto;
+  height: auto;
   background-image: url('./image/background-image.jpg');
   background-size: cover; /* 画像を要素全体にフィットさせる */
   background-repeat: no-repeat; /* 画像の繰り返しを防ぐ */
@@ -16,7 +16,7 @@ body {
 }
 
 header {
-  background-color: #333;
+  background-color: #b3a540;
   color: white;
   padding: 10px 0;
   text-align: center;
